@@ -1,5 +1,6 @@
 New in 0.16 - 2009-XX-XX
 ------------------------
+* Relicensed C++ wrapper under GPLv2 + linking exception (Marek Vavruša and Intra2net)
 * Support for FT2232H and FT4232H (David Challis and Intra2net)
 * Support for mingw cross compile (Uwe Bonnes)
 * Minor autoconf cleanup (Tarek Heiland)
